# cuda-checkers

./: .gitignore  CMakeLists.txt  Makefile  README.md  cuda-checkers  game_init.txt  game_init_late.txt  king_multi.txt  multicapt.txt  todo.md  white_winning.txt
docs/: final.typ  initial.typ  initial_eng.typ  initial_pl.typ
logs/: game_init_late.txt  log.txt
src/: board.c  board.cuh  board.h  gamestate.c  gamestate.cuh  gamestate.h  helpers.h  main.c  main.cu  mcts.c  mcts.cuh  mcts.h  mcts_gpu.cuh  move.c  move.cuh  move.h  movegen.c  movegen.cuh  movegen.h  tree.cuh
